test/libsolidity/syntaxTests/parsing/elementary_non_address_state_mutability_file_var.sol
bool payable a;
string payable b;
int payable c;
int256 payable d;
uint payable e;
uint256 payable f;
bytes1 payable g;
bytes payable h;
bytes32 payable i;
fixed payable j;
fixed80x80 payable k;
ufixed payable l;
ufixed80x80 payable m;

bool view a2;
string view b2;
int view c2;
int256 view d2;
uint view e2;
uint256 view f2;
bytes1 view g2;
bytes view h2;
bytes32 view i2;
fixed view j2;
fixed80x80 view k2;
ufixed view l2;
ufixed80x80 view m2;

bool pure a3;
string pure b3;
int pure c3;
int256 pure d3;
uint pure e3;
uint256 pure f3;
bytes1 pure g3;
bytes pure h3;
bytes32 pure i3;
fixed pure j3;
fixed80x80 pure k3;
ufixed pure l3;
ufixed80x80 pure m3;
// ----
// ParserError 9106: (5-12): State mutability can only be specified for address types.
// ParserError 9106: (23-30): State mutability can only be specified for address types.
// ParserError 9106: (38-45): State mutability can only be specified for address types.
// ParserError 9106: (56-63): State mutability can only be specified for address types.
// ParserError 9106: (72-79): State mutability can only be specified for address types.
// ParserError 9106: (91-98): State mutability can only be specified for address types.
// ParserError 9106: (109-116): State mutability can only be specified for address types.
// ParserError 9106: (126-133): State mutability can only be specified for address types.
// ParserError 9106: (145-152): State mutability can only be specified for address types.
// ParserError 9106: (162-169): State mutability can only be specified for address types.
// ParserError 9106: (184-191): State mutability can only be specified for address types.
// ParserError 9106: (202-209): State mutability can only be specified for address types.
// ParserError 9106: (225-232): State mutability can only be specified for address types.
// ParserError 9106: (242-246): State mutability can only be specified for address types.
// ParserError 9106: (258-262): State mutability can only be specified for address types.
// ParserError 9106: (271-275): State mutability can only be specified for address types.
// ParserError 9106: (287-291): State mutability can only be specified for address types.
// ParserError 9106: (301-305): State mutability can only be specified for address types.
// ParserError 9106: (318-322): State mutability can only be specified for address types.
// ParserError 9106: (334-338): State mutability can only be specified for address types.
// ParserError 9106: (349-353): State mutability can only be specified for address types.
// ParserError 9106: (366-370): State mutability can only be specified for address types.
// ParserError 9106: (381-385): State mutability can only be specified for address types.
// ParserError 9106: (401-405): State mutability can only be specified for address types.
// ParserError 9106: (417-421): State mutability can only be specified for address types.
// ParserError 9106: (438-442): State mutability can only be specified for address types.
// ParserError 9106: (453-457): State mutability can only be specified for address types.
// ParserError 9106: (469-473): State mutability can only be specified for address types.
// ParserError 9106: (482-486): State mutability can only be specified for address types.
// ParserError 9106: (498-502): State mutability can only be specified for address types.
// ParserError 9106: (512-516): State mutability can only be specified for address types.
// ParserError 9106: (529-533): State mutability can only be specified for address types.
// ParserError 9106: (545-549): State mutability can only be specified for address types.
// ParserError 9106: (560-564): State mutability can only be specified for address types.
// ParserError 9106: (577-581): State mutability can only be specified for address types.
// ParserError 9106: (592-596): State mutability can only be specified for address types.
// ParserError 9106: (612-616): State mutability can only be specified for address types.
// ParserError 9106: (628-632): State mutability can only be specified for address types.
// ParserError 9106: (649-653): State mutability can only be specified for address types.
